--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               </div>
             </div> 
           </div>
-          <div class="rounded-[16px] bg-[#131318] p-8 absolute bottom-6 right-5 max-sm:static w-full mt-5">
+          <div class="rounded-[16px] bg-[#131318] p-8 absolute bottom-6 right-5 max-sm:static max-sm:w-full max-sm:mt-5">
             <h4 class="text-white font-extrabold mb-2.5">Meet all the heroes from the field</h4>
             <p class="text-white/60">Welcome to the Professional Hockey Club, where <br>passion meets precision on the icy battleground</p>
           </div>
